# bazel-go-monorepo

./: BUILD  README.md  WORKSPACE  bld.bk  go.mod  go.sum
services/auth/: BUILD.bazel
services/fill/: BUILD.bazel  main.go
services/mint/: BUILD.bazel  api.go
