load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fill_lib",
    srcs = ["main.go"],
    importpath = "github.com/glennadjrussell/mdax/services/fill",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "fill",
    embed = [":fill_lib"],
    visibility = ["//visibility:public"],
)
