load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mint_lib",
    srcs = ["api.go"],
    importpath = "github.com/glennadjrussell/bazel-go-monorepo/services/mint",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_kit_kit//endpoint",
        "@com_github_go_kit_kit//transport/http",
    ],
)

go_binary(
    name = "mint",
    embed = [":mint_lib"],
    visibility = ["//visibility:public"],
)
